PA2/parser.output
Grammar

    0 $accept: program $end

    1 program: expression

    2 expression: TOKEN_LET identifier TOKEN_EQ expression TOKEN_IN expression
    3           | TOKEN_FUN identifier TOKEN_WITH identifier_list TOKEN_EQ expression TOKEN_IN expression
    4           | TOKEN_LAMBDA identifier_list TOKEN_DOT expression
    5           | TOKEN_IF expression TOKEN_THEN expression TOKEN_ELSE expression
    6           | expression TOKEN_PLUS expression
    7           | expression TOKEN_AND expression
    8           | expression TOKEN_OR expression
    9           | expression TOKEN_MINUS expression
   10           | expression TOKEN_TIMES expression
   11           | expression TOKEN_DIVIDE expression
   12           | expression TOKEN_EQ expression
   13           | expression TOKEN_NEQ expression
   14           | expression TOKEN_LT expression
   15           | expression TOKEN_LEQ expression
   16           | expression TOKEN_GT expression
   17           | expression TOKEN_GEQ expression
   18           | TOKEN_INT
   19           | TOKEN_STRING
   20           | TOKEN_LPAREN expression_application TOKEN_RPAREN
   21           | TOKEN_PRINT expression
   22           | TOKEN_READINT
   23           | TOKEN_READSTRING
   24           | TOKEN_HD expression
   25           | TOKEN_TL expression
   26           | expression TOKEN_CONS expression
   27           | TOKEN_NIL
   28           | TOKEN_ISNIL expression
   29           | identifier
   30           | TOKEN_LPAREN expression TOKEN_RPAREN
   31           | TOKEN_ERROR

   32 expression_application: expression expression
   33                       | expression_application expression

   34 identifier_list: identifier
   35                | identifier_list TOKEN_COMMA identifier

   36 identifier: TOKEN_IDENTIFIER


Terminals, with rules where they appear

$end (0) 0
error (256)
TOKEN_READSTRING (258) 23
TOKEN_READINT (259) 22
TOKEN_PRINT (260) 21
TOKEN_ISNIL (261) 28
TOKEN_HD (262) 24
TOKEN_TL (263) 25
TOKEN_CONS (264) 26
TOKEN_NIL (265) 27
TOKEN_DOT (266) 4
TOKEN_WITH (267) 3
TOKEN_LET (268) 2
TOKEN_PLUS (269) 6
TOKEN_MINUS (270) 9
TOKEN_IDENTIFIER (271) 36
TOKEN_TIMES (272) 10
TOKEN_DIVIDE (273) 11
TOKEN_INT (274) 18
TOKEN_LPAREN (275) 20 30
TOKEN_RPAREN (276) 20 30
TOKEN_AND (277) 7
TOKEN_OR (278) 8
TOKEN_EQ (279) 2 3 12
TOKEN_NEQ (280) 13
TOKEN_GT (281) 16
TOKEN_GEQ (282) 17
TOKEN_LT (283) 14
TOKEN_LEQ (284) 15
TOKEN_IF (285) 5
TOKEN_THEN (286) 5
TOKEN_ELSE (287) 5
TOKEN_LAMBDA (288) 4
TOKEN_FUN (289) 3
TOKEN_COMMA (290) 35
TOKEN_STRING (291) 19
TOKEN_ERROR (292) 31
TOKEN_IN (293) 2 3
EXPR (294)


Nonterminals, with rules where they appear

$accept (40)
    on left: 0
program (41)
    on left: 1, on right: 0
expression (42)
    on left: 2 3 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22
    23 24 25 26 27 28 29 30 31, on right: 1 2 3 4 5 6 7 8 9 10 11 12
    13 14 15 16 17 21 24 25 26 28 30 32 33
expression_application (43)
    on left: 32 33, on right: 20 33
identifier_list (44)
    on left: 34 35, on right: 3 4 35
identifier (45)
    on left: 36, on right: 2 3 29 34 35


state 0

    0 $accept: . program $end

    TOKEN_READSTRING  shift, and go to state 1
    TOKEN_READINT     shift, and go to state 2
    TOKEN_PRINT       shift, and go to state 3
    TOKEN_ISNIL       shift, and go to state 4
    TOKEN_HD          shift, and go to state 5
    TOKEN_TL          shift, and go to state 6
    TOKEN_NIL         shift, and go to state 7
    TOKEN_LET         shift, and go to state 8
    TOKEN_IDENTIFIER  shift, and go to state 9
    TOKEN_INT         shift, and go to state 10
    TOKEN_LPAREN      shift, and go to state 11
    TOKEN_IF          shift, and go to state 12
    TOKEN_LAMBDA      shift, and go to state 13
    TOKEN_FUN         shift, and go to state 14
    TOKEN_STRING      shift, and go to state 15
    TOKEN_ERROR       shift, and go to state 16

    program     go to state 17
    expression  go to state 18
    identifier  go to state 19


state 1

   23 expression: TOKEN_READSTRING .

    $default  reduce using rule 23 (expression)


state 2

   22 expression: TOKEN_READINT .

    $default  reduce using rule 22 (expression)


state 3

   21 expression: TOKEN_PRINT . expression

    TOKEN_READSTRING  shift, and go to state 1
    TOKEN_READINT     shift, and go to state 2
    TOKEN_PRINT       shift, and go to state 3
    TOKEN_ISNIL       shift, and go to state 4
    TOKEN_HD          shift, and go to state 5
    TOKEN_TL          shift, and go to state 6
    TOKEN_NIL         shift, and go to state 7
    TOKEN_LET         shift, and go to state 8
    TOKEN_IDENTIFIER  shift, and go to state 9
    TOKEN_INT         shift, and go to state 10
    TOKEN_LPAREN      shift, and go to state 11
    TOKEN_IF          shift, and go to state 12
    TOKEN_LAMBDA      shift, and go to state 13
    TOKEN_FUN         shift, and go to state 14
    TOKEN_STRING      shift, and go to state 15
    TOKEN_ERROR       shift, and go to state 16

    expression  go to state 20
    identifier  go to state 19


state 4

   28 expression: TOKEN_ISNIL . expression

    TOKEN_READSTRING  shift, and go to state 1
    TOKEN_READINT     shift, and go to state 2
    TOKEN_PRINT       shift, and go to state 3
    TOKEN_ISNIL       shift, and go to state 4
    TOKEN_HD          shift, and go to state 5
    TOKEN_TL          shift, and go to state 6
    TOKEN_NIL         shift, and go to state 7
    TOKEN_LET         shift, and go to state 8
    TOKEN_IDENTIFIER  shift, and go to state 9
    TOKEN_INT         shift, and go to state 10
    TOKEN_LPAREN      shift, and go to state 11
    TOKEN_IF          shift, and go to state 12
    TOKEN_LAMBDA      shift, and go to state 13
    TOKEN_FUN         shift, and go to state 14
    TOKEN_STRING      shift, and go to state 15
    TOKEN_ERROR       shift, and go to state 16

    expression  go to state 21
    identifier  go to state 19


state 5

   24 expression: TOKEN_HD . expression

    TOKEN_READSTRING  shift, and go to state 1
    TOKEN_READINT     shift, and go to state 2
    TOKEN_PRINT       shift, and go to state 3
    TOKEN_ISNIL       shift, and go to state 4
    TOKEN_HD          shift, and go to state 5
    TOKEN_TL          shift, and go to state 6
    TOKEN_NIL         shift, and go to state 7
    TOKEN_LET         shift, and go to state 8
    TOKEN_IDENTIFIER  shift, and go to state 9
    TOKEN_INT         shift, and go to state 10
    TOKEN_LPAREN      shift, and go to state 11
    TOKEN_IF          shift, and go to state 12
    TOKEN_LAMBDA      shift, and go to state 13
    TOKEN_FUN         shift, and go to state 14
    TOKEN_STRING      shift, and go to state 15
    TOKEN_ERROR       shift, and go to state 16

    expression  go to state 22
    identifier  go to state 19


state 6

   25 expression: TOKEN_TL . expression

    TOKEN_READSTRING  shift, and go to state 1
    TOKEN_READINT     shift, and go to state 2
    TOKEN_PRINT       shift, and go to state 3
    TOKEN_ISNIL       shift, and go to state 4
    TOKEN_HD          shift, and go to state 5
    TOKEN_TL          shift, and go to state 6
    TOKEN_NIL         shift, and go to state 7
    TOKEN_LET         shift, and go to state 8
    TOKEN_IDENTIFIER  shift, and go to state 9
    TOKEN_INT         shift, and go to state 10
    TOKEN_LPAREN      shift, and go to state 11
    TOKEN_IF          shift, and go to state 12
    TOKEN_LAMBDA      shift, and go to state 13
    TOKEN_FUN         shift, and go to state 14
    TOKEN_STRING      shift, and go to state 15
    TOKEN_ERROR       shift, and go to state 16

    expression  go to state 23
    identifier  go to state 19


state 7

   27 expression: TOKEN_NIL .

    $default  reduce using rule 27 (expression)


state 8

    2 expression: TOKEN_LET . identifier TOKEN_EQ expression TOKEN_IN expression

    TOKEN_IDENTIFIER  shift, and go to state 9

    identifier  go to state 24


state 9

   36 identifier: TOKEN_IDENTIFIER .

    $default  reduce using rule 36 (identifier)


state 10

   18 expression: TOKEN_INT .

    $default  reduce using rule 18 (expression)


state 11

   20 expression: TOKEN_LPAREN . expression_application TOKEN_RPAREN
   30           | TOKEN_LPAREN . expression TOKEN_RPAREN

    TOKEN_READSTRING  shift, and go to state 1
    TOKEN_READINT     shift, and go to state 2
    TOKEN_PRINT       shift, and go to state 3
    TOKEN_ISNIL       shift, and go to state 4
    TOKEN_HD          shift, and go to state 5
    TOKEN_TL          shift, and go to state 6
    TOKEN_NIL         shift, and go to state 7
    TOKEN_LET         shift, and go to state 8
    TOKEN_IDENTIFIER  shift, and go to state 9
    TOKEN_INT         shift, and go to state 10
    TOKEN_LPAREN      shift, and go to state 11
    TOKEN_IF          shift, and go to state 12
    TOKEN_LAMBDA      shift, and go to state 13
    TOKEN_FUN         shift, and go to state 14
    TOKEN_STRING      shift, and go to state 15
    TOKEN_ERROR       shift, and go to state 16

    expression              go to state 25
    expression_application  go to state 26
    identifier              go to state 19


state 12

    5 expression: TOKEN_IF . expression TOKEN_THEN expression TOKEN_ELSE expression

    TOKEN_READSTRING  shift, and go to state 1
    TOKEN_READINT     shift, and go to state 2
    TOKEN_PRINT       shift, and go to state 3
    TOKEN_ISNIL       shift, and go to state 4
    TOKEN_HD          shift, and go to state 5
    TOKEN_TL          shift, and go to state 6
    TOKEN_NIL         shift, and go to state 7
    TOKEN_LET         shift, and go to state 8
    TOKEN_IDENTIFIER  shift, and go to state 9
    TOKEN_INT         shift, and go to state 10
    TOKEN_LPAREN      shift, and go to state 11
    TOKEN_IF          shift, and go to state 12
    TOKEN_LAMBDA      shift, and go to state 13
    TOKEN_FUN         shift, and go to state 14
    TOKEN_STRING      shift, and go to state 15
    TOKEN_ERROR       shift, and go to state 16

    expression  go to state 27
    identifier  go to state 19


state 13

    4 expression: TOKEN_LAMBDA . identifier_list TOKEN_DOT expression

    TOKEN_IDENTIFIER  shift, and go to state 9

    identifier_list  go to state 28
    identifier       go to state 29


state 14

    3 expression: TOKEN_FUN . identifier TOKEN_WITH identifier_list TOKEN_EQ expression TOKEN_IN expression

    TOKEN_IDENTIFIER  shift, and go to state 9

    identifier  go to state 30


state 15

   19 expression: TOKEN_STRING .

    $default  reduce using rule 19 (expression)


state 16

   31 expression: TOKEN_ERROR .

    $default  reduce using rule 31 (expression)


state 17

    0 $accept: program . $end

    $end  shift, and go to state 31


state 18

    1 program: expression .
    6 expression: expression . TOKEN_PLUS expression
    7           | expression . TOKEN_AND expression
    8           | expression . TOKEN_OR expression
    9           | expression . TOKEN_MINUS expression
   10           | expression . TOKEN_TIMES expression
   11           | expression . TOKEN_DIVIDE expression
   12           | expression . TOKEN_EQ expression
   13           | expression . TOKEN_NEQ expression
   14           | expression . TOKEN_LT expression
   15           | expression . TOKEN_LEQ expression
   16           | expression . TOKEN_GT expression
   17           | expression . TOKEN_GEQ expression
   26           | expression . TOKEN_CONS expression

    TOKEN_CONS    shift, and go to state 32
    TOKEN_PLUS    shift, and go to state 33
    TOKEN_MINUS   shift, and go to state 34
    TOKEN_TIMES   shift, and go to state 35
    TOKEN_DIVIDE  shift, and go to state 36
    TOKEN_AND     shift, and go to state 37
    TOKEN_OR      shift, and go to state 38
    TOKEN_EQ      shift, and go to state 39
    TOKEN_NEQ     shift, and go to state 40
    TOKEN_GT      shift, and go to state 41
    TOKEN_GEQ     shift, and go to state 42
    TOKEN_LT      shift, and go to state 43
    TOKEN_LEQ     shift, and go to state 44

    $default  reduce using rule 1 (program)


state 19

   29 expression: identifier .

    $default  reduce using rule 29 (expression)


state 20

    6 expression: expression . TOKEN_PLUS expression
    7           | expression . TOKEN_AND expression
    8           | expression . TOKEN_OR expression
    9           | expression . TOKEN_MINUS expression
   10           | expression . TOKEN_TIMES expression
   11           | expression . TOKEN_DIVIDE expression
   12           | expression . TOKEN_EQ expression
   13           | expression . TOKEN_NEQ expression
   14           | expression . TOKEN_LT expression
   15           | expression . TOKEN_LEQ expression
   16           | expression . TOKEN_GT expression
   17           | expression . TOKEN_GEQ expression
   21           | TOKEN_PRINT expression .
   26           | expression . TOKEN_CONS expression

    TOKEN_CONS    shift, and go to state 32
    TOKEN_PLUS    shift, and go to state 33
    TOKEN_MINUS   shift, and go to state 34
    TOKEN_TIMES   shift, and go to state 35
    TOKEN_DIVIDE  shift, and go to state 36
    TOKEN_AND     shift, and go to state 37
    TOKEN_OR      shift, and go to state 38
    TOKEN_EQ      shift, and go to state 39
    TOKEN_NEQ     shift, and go to state 40
    TOKEN_GT      shift, and go to state 41
    TOKEN_GEQ     shift, and go to state 42
    TOKEN_LT      shift, and go to state 43
    TOKEN_LEQ     shift, and go to state 44

    $default  reduce using rule 21 (expression)


state 21

    6 expression: expression . TOKEN_PLUS expression
    7           | expression . TOKEN_AND expression
    8           | expression . TOKEN_OR expression
    9           | expression . TOKEN_MINUS expression
   10           | expression . TOKEN_TIMES expression
   11           | expression . TOKEN_DIVIDE expression
   12           | expression . TOKEN_EQ expression
   13           | expression . TOKEN_NEQ expression
   14           | expression . TOKEN_LT expression
   15           | expression . TOKEN_LEQ expression
   16           | expression . TOKEN_GT expression
   17           | expression . TOKEN_GEQ expression
   26           | expression . TOKEN_CONS expression
   28           | TOKEN_ISNIL expression .

    TOKEN_CONS  shift, and go to state 32

    $default  reduce using rule 28 (expression)


state 22

    6 expression: expression . TOKEN_PLUS expression
    7           | expression . TOKEN_AND expression
    8           | expression . TOKEN_OR expression
    9           | expression . TOKEN_MINUS expression
   10           | expression . TOKEN_TIMES expression
   11           | expression . TOKEN_DIVIDE expression
   12           | expression . TOKEN_EQ expression
   13           | expression . TOKEN_NEQ expression
   14           | expression . TOKEN_LT expression
   15           | expression . TOKEN_LEQ expression
   16           | expression . TOKEN_GT expression
   17           | expression . TOKEN_GEQ expression
   24           | TOKEN_HD expression .
   26           | expression . TOKEN_CONS expression

    $default  reduce using rule 24 (expression)


state 23

    6 expression: expression . TOKEN_PLUS expression
    7           | expression . TOKEN_AND expression
    8           | expression . TOKEN_OR expression
    9           | expression . TOKEN_MINUS expression
   10           | expression . TOKEN_TIMES expression
   11           | expression . TOKEN_DIVIDE expression
   12           | expression . TOKEN_EQ expression
   13           | expression . TOKEN_NEQ expression
   14           | expression . TOKEN_LT expression
   15           | expression . TOKEN_LEQ expression
   16           | expression . TOKEN_GT expression
   17           | expression . TOKEN_GEQ expression
   25           | TOKEN_TL expression .
   26           | expression . TOKEN_CONS expression

    $default  reduce using rule 25 (expression)


state 24

    2 expression: TOKEN_LET identifier . TOKEN_EQ expression TOKEN_IN expression

    TOKEN_EQ  shift, and go to state 45


state 25

    6 expression: expression . TOKEN_PLUS expression
    7           | expression . TOKEN_AND expression
    8           | expression . TOKEN_OR expression
    9           | expression . TOKEN_MINUS expression
   10           | expression . TOKEN_TIMES expression
   11           | expression . TOKEN_DIVIDE expression
   12           | expression . TOKEN_EQ expression
   13           | expression . TOKEN_NEQ expression
   14           | expression . TOKEN_LT expression
   15           | expression . TOKEN_LEQ expression
   16           | expression . TOKEN_GT expression
   17           | expression . TOKEN_GEQ expression
   26           | expression . TOKEN_CONS expression
   30           | TOKEN_LPAREN expression . TOKEN_RPAREN
   32 expression_application: expression . expression

    TOKEN_READSTRING  shift, and go to state 1
    TOKEN_READINT     shift, and go to state 2
    TOKEN_PRINT       shift, and go to state 3
    TOKEN_ISNIL       shift, and go to state 4
    TOKEN_HD          shift, and go to state 5
    TOKEN_TL          shift, and go to state 6
    TOKEN_CONS        shift, and go to state 32
    TOKEN_NIL         shift, and go to state 7
    TOKEN_LET         shift, and go to state 8
    TOKEN_PLUS        shift, and go to state 33
    TOKEN_MINUS       shift, and go to state 34
    TOKEN_IDENTIFIER  shift, and go to state 9
    TOKEN_TIMES       shift, and go to state 35
    TOKEN_DIVIDE      shift, and go to state 36
    TOKEN_INT         shift, and go to state 10
    TOKEN_LPAREN      shift, and go to state 11
    TOKEN_RPAREN      shift, and go to state 46
    TOKEN_AND         shift, and go to state 37
    TOKEN_OR          shift, and go to state 38
    TOKEN_EQ          shift, and go to state 39
    TOKEN_NEQ         shift, and go to state 40
    TOKEN_GT          shift, and go to state 41
    TOKEN_GEQ         shift, and go to state 42
    TOKEN_LT          shift, and go to state 43
    TOKEN_LEQ         shift, and go to state 44
    TOKEN_IF          shift, and go to state 12
    TOKEN_LAMBDA      shift, and go to state 13
    TOKEN_FUN         shift, and go to state 14
    TOKEN_STRING      shift, and go to state 15
    TOKEN_ERROR       shift, and go to state 16

    expression  go to state 47
    identifier  go to state 19


state 26

   20 expression: TOKEN_LPAREN expression_application . TOKEN_RPAREN
   33 expression_application: expression_application . expression

    TOKEN_READSTRING  shift, and go to state 1
    TOKEN_READINT     shift, and go to state 2
    TOKEN_PRINT       shift, and go to state 3
    TOKEN_ISNIL       shift, and go to state 4
    TOKEN_HD          shift, and go to state 5
    TOKEN_TL          shift, and go to state 6
    TOKEN_NIL         shift, and go to state 7
    TOKEN_LET         shift, and go to state 8
    TOKEN_IDENTIFIER  shift, and go to state 9
    TOKEN_INT         shift, and go to state 10
    TOKEN_LPAREN      shift, and go to state 11
    TOKEN_RPAREN      shift, and go to state 48
    TOKEN_IF          shift, and go to state 12
    TOKEN_LAMBDA      shift, and go to state 13
    TOKEN_FUN         shift, and go to state 14
    TOKEN_STRING      shift, and go to state 15
    TOKEN_ERROR       shift, and go to state 16

    expression  go to state 49
    identifier  go to state 19


state 27

    5 expression: TOKEN_IF expression . TOKEN_THEN expression TOKEN_ELSE expression
    6           | expression . TOKEN_PLUS expression
    7           | expression . TOKEN_AND expression
    8           | expression . TOKEN_OR expression
    9           | expression . TOKEN_MINUS expression
   10           | expression . TOKEN_TIMES expression
   11           | expression . TOKEN_DIVIDE expression
   12           | expression . TOKEN_EQ expression
   13           | expression . TOKEN_NEQ expression
   14           | expression . TOKEN_LT expression
   15           | expression . TOKEN_LEQ expression
   16           | expression . TOKEN_GT expression
   17           | expression . TOKEN_GEQ expression
   26           | expression . TOKEN_CONS expression

    TOKEN_CONS    shift, and go to state 32
    TOKEN_PLUS    shift, and go to state 33
    TOKEN_MINUS   shift, and go to state 34
    TOKEN_TIMES   shift, and go to state 35
    TOKEN_DIVIDE  shift, and go to state 36
    TOKEN_AND     shift, and go to state 37
    TOKEN_OR      shift, and go to state 38
    TOKEN_EQ      shift, and go to state 39
    TOKEN_NEQ     shift, and go to state 40
    TOKEN_GT      shift, and go to state 41
    TOKEN_GEQ     shift, and go to state 42
    TOKEN_LT      shift, and go to state 43
    TOKEN_LEQ     shift, and go to state 44
    TOKEN_THEN    shift, and go to state 50


state 28

    4 expression: TOKEN_LAMBDA identifier_list . TOKEN_DOT expression
   35 identifier_list: identifier_list . TOKEN_COMMA identifier

    TOKEN_DOT    shift, and go to state 51
    TOKEN_COMMA  shift, and go to state 52


state 29

   34 identifier_list: identifier .

    $default  reduce using rule 34 (identifier_list)


state 30

    3 expression: TOKEN_FUN identifier . TOKEN_WITH identifier_list TOKEN_EQ expression TOKEN_IN expression

    TOKEN_WITH  shift, and go to state 53


state 31

    0 $accept: program $end .

    $default  accept


state 32

   26 expression: expression TOKEN_CONS . expression

    TOKEN_READSTRING  shift, and go to state 1
    TOKEN_READINT     shift, and go to state 2
    TOKEN_PRINT       shift, and go to state 3
    TOKEN_ISNIL       shift, and go to state 4
    TOKEN_HD          shift, and go to state 5
    TOKEN_TL          shift, and go to state 6
    TOKEN_NIL         shift, and go to state 7
    TOKEN_LET         shift, and go to state 8
    TOKEN_IDENTIFIER  shift, and go to state 9
    TOKEN_INT         shift, and go to state 10
    TOKEN_LPAREN      shift, and go to state 11
    TOKEN_IF          shift, and go to state 12
    TOKEN_LAMBDA      shift, and go to state 13
    TOKEN_FUN         shift, and go to state 14
    TOKEN_STRING      shift, and go to state 15
    TOKEN_ERROR       shift, and go to state 16

    expression  go to state 54
    identifier  go to state 19


state 33

    6 expression: expression TOKEN_PLUS . expression

    TOKEN_READSTRING  shift, and go to state 1
    TOKEN_READINT     shift, and go to state 2
    TOKEN_PRINT       shift, and go to state 3
    TOKEN_ISNIL       shift, and go to state 4
    TOKEN_HD          shift, and go to state 5
    TOKEN_TL          shift, and go to state 6
    TOKEN_NIL         shift, and go to state 7
    TOKEN_LET         shift, and go to state 8
    TOKEN_IDENTIFIER  shift, and go to state 9
    TOKEN_INT         shift, and go to state 10
    TOKEN_LPAREN      shift, and go to state 11
    TOKEN_IF          shift, and go to state 12
    TOKEN_LAMBDA      shift, and go to state 13
    TOKEN_FUN         shift, and go to state 14
    TOKEN_STRING      shift, and go to state 15
    TOKEN_ERROR       shift, and go to state 16

    expression  go to state 55
    identifier  go to state 19


state 34

    9 expression: expression TOKEN_MINUS . expression

    TOKEN_READSTRING  shift, and go to state 1
    TOKEN_READINT     shift, and go to state 2
    TOKEN_PRINT       shift, and go to state 3
    TOKEN_ISNIL       shift, and go to state 4
    TOKEN_HD          shift, and go to state 5
    TOKEN_TL          shift, and go to state 6
    TOKEN_NIL         shift, and go to state 7
    TOKEN_LET         shift, and go to state 8
    TOKEN_IDENTIFIER  shift, and go to state 9
    TOKEN_INT         shift, and go to state 10
    TOKEN_LPAREN      shift, and go to state 11
    TOKEN_IF          shift, and go to state 12
    TOKEN_LAMBDA      shift, and go to state 13
    TOKEN_FUN         shift, and go to state 14
    TOKEN_STRING      shift, and go to state 15
    TOKEN_ERROR       shift, and go to state 16

    expression  go to state 56
    identifier  go to state 19


state 35

   10 expression: expression TOKEN_TIMES . expression

    TOKEN_READSTRING  shift, and go to state 1
    TOKEN_READINT     shift, and go to state 2
    TOKEN_PRINT       shift, and go to state 3
    TOKEN_ISNIL       shift, and go to state 4
    TOKEN_HD          shift, and go to state 5
    TOKEN_TL          shift, and go to state 6
    TOKEN_NIL         shift, and go to state 7
    TOKEN_LET         shift, and go to state 8
    TOKEN_IDENTIFIER  shift, and go to state 9
    TOKEN_INT         shift, and go to state 10
    TOKEN_LPAREN      shift, and go to state 11
    TOKEN_IF          shift, and go to state 12
    TOKEN_LAMBDA      shift, and go to state 13
    TOKEN_FUN         shift, and go to state 14
    TOKEN_STRING      shift, and go to state 15
    TOKEN_ERROR       shift, and go to state 16

    expression  go to state 57
    identifier  go to state 19


state 36

   11 expression: expression TOKEN_DIVIDE . expression

    TOKEN_READSTRING  shift, and go to state 1
    TOKEN_READINT     shift, and go to state 2
    TOKEN_PRINT       shift, and go to state 3
    TOKEN_ISNIL       shift, and go to state 4
    TOKEN_HD          shift, and go to state 5
    TOKEN_TL          shift, and go to state 6
    TOKEN_NIL         shift, and go to state 7
    TOKEN_LET         shift, and go to state 8
    TOKEN_IDENTIFIER  shift, and go to state 9
    TOKEN_INT         shift, and go to state 10
    TOKEN_LPAREN      shift, and go to state 11
    TOKEN_IF          shift, and go to state 12
    TOKEN_LAMBDA      shift, and go to state 13
    TOKEN_FUN         shift, and go to state 14
    TOKEN_STRING      shift, and go to state 15
    TOKEN_ERROR       shift, and go to state 16

    expression  go to state 58
    identifier  go to state 19


state 37

    7 expression: expression TOKEN_AND . expression

    TOKEN_READSTRING  shift, and go to state 1
    TOKEN_READINT     shift, and go to state 2
    TOKEN_PRINT       shift, and go to state 3
    TOKEN_ISNIL       shift, and go to state 4
    TOKEN_HD          shift, and go to state 5
    TOKEN_TL          shift, and go to state 6
    TOKEN_NIL         shift, and go to state 7
    TOKEN_LET         shift, and go to state 8
    TOKEN_IDENTIFIER  shift, and go to state 9
    TOKEN_INT         shift, and go to state 10
    TOKEN_LPAREN      shift, and go to state 11
    TOKEN_IF          shift, and go to state 12
    TOKEN_LAMBDA      shift, and go to state 13
    TOKEN_FUN         shift, and go to state 14
    TOKEN_STRING      shift, and go to state 15
    TOKEN_ERROR       shift, and go to state 16

    expression  go to state 59
    identifier  go to state 19


state 38

    8 expression: expression TOKEN_OR . expression

    TOKEN_READSTRING  shift, and go to state 1
    TOKEN_READINT     shift, and go to state 2
    TOKEN_PRINT       shift, and go to state 3
    TOKEN_ISNIL       shift, and go to state 4
    TOKEN_HD          shift, and go to state 5
    TOKEN_TL          shift, and go to state 6
    TOKEN_NIL         shift, and go to state 7
    TOKEN_LET         shift, and go to state 8
    TOKEN_IDENTIFIER  shift, and go to state 9
    TOKEN_INT         shift, and go to state 10
    TOKEN_LPAREN      shift, and go to state 11
    TOKEN_IF          shift, and go to state 12
    TOKEN_LAMBDA      shift, and go to state 13
    TOKEN_FUN         shift, and go to state 14
    TOKEN_STRING      shift, and go to state 15
    TOKEN_ERROR       shift, and go to state 16

    expression  go to state 60
    identifier  go to state 19

